[tool.poetry]
name = "aurora-term"
version = "0.1.0"
description = "Amazon Aurora Serverless interactive terminal"
authors = ["Juliano Fernandes <julianofernandes@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.7"

[tool.poetry.dev-dependencies]
pytest = "^3.0"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
