[tool.poetry]
name = "aurora-term"
version = "0.1.0"
description = "Amazon Aurora Serverless interactive terminal"
authors = ["Juliano Fernandes <julianofernandes@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.7"
boto3 = "^1.10"

[tool.poetry.dev-dependencies]
black = {version = "^18.3-alpha.0", allows-prereleases = true}
flake8 = "^3.7"
ipdb = "^0.12.2"
ipython = "^7.9"
isort = "^4.3"
pre-commit = "^1.20"
pytest = "^3.0"
pytest-cov = "^2.8"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
