[tool.poetry]
name = "aurora-term"
version = "0.1.0"
description = "AWS Aurora Serverless interactive terminal"
authors = ["Juliano Fernandes <julianofernandes@gmail.com>"]
license = "MIT"
readme = "README.rst"
repository = "https://github.com/julianolf/aurora-term"
keywords = ["aws", "aurora", "data-api", "cli"]
classifiers = [
  "Development Status :: 2 - Pre-Alpha",
  "Environment :: Console",
  "Intended Audience :: Developers",
  "Intended Audience :: System Administrators",
  "Operating System :: OS Independent",
  "Programming Language :: Python",
  "Topic :: Database",
  "Topic :: Utilities"
]

[tool.poetry.dependencies]
python = "^3.7"
boto3 = "^1.10"
docopt = "^0.6.2"

[tool.poetry.dev-dependencies]
black = {version = "*", allow-prereleases = true}
flake8 = "*"
ipdb = "*"
ipython = "*"
isort = "*"
pre-commit = "*"
pytest = "*"
pytest-cov = "*"

[tool.poetry.scripts]
aurora-term = "aurora_term.__main__:main"

[tool.black]
line-length = 79
target-version = ['py37']
skip-string-normalization = true

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
